src/assets/styles/utils/_utilites.scss
.u-relative {
  position: relative;
}

.u-inline-block {
  display: inline-block;
}

.u-clearfix {
  @include clearfix;
}

.u-text-upper {
  text-transform: uppercase;
}

.u-capitalizze {
  text-transform: capitalize;
}

.u-align-center {
  align-items: center;
}

.u-text-r {
  text-align: right !important;
}

.u-text-l {
  text-align: left !important;
}

.u-text-center {
  text-align: center;
}

.u-bg-dark-img {
  @include bg-img;
  background-color: $primary;
}

.u-bg-ligt-img {
  @include bg-img;
  background-color: $secondary;
}

.u-radius-lt {
  border-top-left-radius: 20px;
}

.u-radius-lt {
  border-top-left-radius: 50px;
}

.u-radius-lb {
  border-bottom-left-radius: 50px;
}

.u-flex {
  display: flex;
}

.u-jsfy-btwn {
  justify-content: space-between;
}

.u-direction-col {
  flex-direction: column;
}

.u-gap-sm {
  gap: 8px;
}

.u-w-fit {
  max-width: fit-content;
}

.u-h-fit {
  max-height: fit-content;
}

.u-fit-sm {
  max-height: fit-content;

  @include onDesktop {
    height: 100vh;
  }
}

.u-w-100 {
  width: 100%;
}

.u-h-100 {
  height: 100vh;
}

.u-h-110 {
  height: 110vh;
}
.u-m-auto {
  margin: 0 auto !important;

  @include moreThanTablet {
    margin: auto 0;
  }
}

.u-fw-light {
  font-weight: $fw-4;
}

.u-my-auto {
  margin: auto 0;
}

.u-pointer {
  cursor: pointer;
}

.u-w-50 {
  width: 50%;
  height: 100%;
}

.u-w-30 {
  width: 30%;
}

.u-fs-xs {
  font-size: 10px;
  @include onDesktop {
    font-size: 14px;
  }
}

.u-z-100 {
  z-index: 100;
}

.u-hiden {
  display: none;
}

.u-align-end {
  justify-content: end;
}

h1 {
  font-weight: $fw-7;
  font-size: $fs-xl;
  line-height: $fs-xl;

  @include onTablet {
    font-size: $fs-xxl;
    line-height: $fs-xxl;
  }
}

h2 {
  font-weight: $fw-6;
  font-size: 36px;
  line-height: 48px;
  letter-spacing: -2.7px;

  @include moreThanTablet {
    font-size: $fs-xl;
    line-height: 96px;
  }
}

h3 {
  font-weight: $fw-7;
  font-size: $fs-lg;
  line-height: 42px;

  @include moreThanTablet {
    font-weight: $fw-8;
    font-size: $fs-xl;
    line-height: $fs-xl;
  }
}

h4 {
  font-weight: $fw-6;
  font-size: 20px;
  line-height: $fs-xm;
  letter-spacing: 0;
  text-transform: uppercase;

  @include moreThanTablet {
    font-weight: $fw-7;
    font-size: $fs-md;
    letter-spacing: 0.04em;
  }
}

h5 {
  font-weight: $fw-8;
  font-size: $fs-md;
  line-height: $fs-lg;
}

h6 {
  font-weight: $fw-5;
  font-size: $base-fs;
  line-height: 22px;
  padding-bottom: 6px;

  @include moreThanTablet {
    font-weight: $fw-5;
    font-size: $fs-md;
    line-height: 34px;
    padding-bottom: 6px;
  }
}

.u-gap-menu {
  gap: 30vh;

  @media screen and (max-heigth: 843px) and (min-height: 749px) {
    gap: 42vh;
  }

  @media (min-height: 844px) {
    gap: 47vh;
  }
}

